--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,5 @@
 <h1>有關本網站</h1>
-<p>這裡是50833106的紀錄學習歷程網站</p>
-<p><img alt="Hello Cute GIF - Hello Cute Cat - Discover &amp; Share GIFs" height="349" src="https://media1.tenor.com/images/9969d2bc836ee216a3319d0c15d8ad35/tenor.gif?itemid=16242995" width="349"/></p>
-<h1>About</h1>
+<p>這裡是50833106的紀錄學習歷程網<img alt="Just Saying Hi Hello GIF - JustSayingHi Hello Hey - Discover ..." height="301" src="https://i.pinimg.com/originals/0d/bd/bc/0dbdbc0eddd3cdf8829712ba59effe11.gif" width="402"/></p>
 <p><img alt="" height="199" src="/images/小貓咪.jpg" width="211"/></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h2>利用 cmsimde 建立靜態網誌方法</h2>
@@ -898,10 +896,6 @@
 <h2>w15-18統整</h2>
 <p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
 <h2>分組討論之內容</h2>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<p>分組討論</p>
+<p></p>
+<p></p></div></div></div></div></div></div></div>
